Avoid Solr errors when using JSONP parameters in Solr query. Fix tooltips that were getting cut off in search sidebar.

--- a/metacatui/src/main/webapp/css/metacatui-common.css
+++ b/metacatui/src/main/webapp/css/metacatui-common.css
@@ -1594,6 +1594,7 @@ textarea.token{
 #sidebar .tooltip-inner{
 	font-size: 1.2em;
 	font-weight: normal;
+	max-width: 181px;
 }
 #all_input {
 	width: 75%;
